syntax = "proto3";
package event;

message EventRequest {
  string message = 1;
}

message EventResponse {
  string message = 1;
}

service EventPubsubService {
  rpc Subscribe(stream EventRequest) returns (stream EventResponse);
}